# shaderc-vkrunner-mcp

./: .gitignore  COPYING  Cargo.toml  Dockerfile  README.adoc  README.md  test-build.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build-push-image.yml
examples/: cooperative-matrix.shader_test  require-subgroup-size.shader_test
scripts/: update-vulkan.sh
src/: main.rs
vkrunner/: .gitlab-ci.yml  Cargo.toml  build.rs  config.rs  enum_table.rs  executor.rs  fake_vulkan.rs  features.rs  flush_memory.rs  format.rs  format_table.rs  make-enums.py  make-vulkan-funcs-data.py  pipeline_set.rs  result.rs  small_float.rs  source.rs  test-build.sh  util.rs  vulkan_funcs_data.rs
vkrunner/compiler/: fake_process.rs
vkrunner/examples/: cooperative-matrix.shader_test
vkrunner/src/: main.rs
vkrunner/vkrunner/: compiler.rs  fake_vulkan.rs  make-enums.py  make-features.py  make-vulkan-funcs-data.py  pipeline_set.rs  requirements.rs  script.rs  source.rs  temp_file.rs  tester.rs  vk.rs  vulkan_funcs_data.rs
